<resources>
    <string name="app_name">Peppa</string>
    <string name="action_settings">Settings</string>
    <string name="facebookapp_id">810416655730097</string>
    <string name="facebookapp_idmy">1730590367231008</string>
    <string name="Googlemap_apikey">AIzaSyAnlTnZZsYzXzAPaITVmpagDysw6K1fwB4</string>
    <string name="action_profile">Profile</string>
    <string name="button_facebook">LOG IN WITH FACEBOOK</string>
    <string name="f_hint">FIRST NAME</string>
    <string name="l_hint">LAST NAME</string>
    <string name="u_hint">USERNAME</string>
    <string name="email_hint">EMAIL</string>
    <string name="pw_hint">PASSWORD</string>
    <string name="forgot_pw">FORGOT PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="facebook_mobile">No email address is associated with this Facebook account.</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="greeting">Sup Andrew?</string>
    <string name="question">What do you feel like?</string>
    <string name="search_hint">Search Food items or restaurants</string>
    <string name="location">Collingwood, Vic</string>
    <string name="locationpopuptital">Enter suburb</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="restaurants">Restaurants</string>
    <string name="dishes">Dishes</string>
    <string name="phone_number">03 9123 4567</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="restaurant_name">Duck Place</string>
    <string name="dish_name">Red duck curry</string>
    <string name="restaurant_address">2 Victoria Pde, Collingwood</string>
    <string name="rating">0 </string>
    <string name="percent_label"> </string>
    <string name="votes">320 votes</string>
    <string name="follow">245 Followers</string>
    <string name="unfollow_label">Unfollow</string>
    <string name="follow_label">+ Follow </string>
    <string name="votetext">VOTES</string>
    <string name="dishnotavailabel">Dishes not available</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="price">$12</string>
    <string name="call_label">Call</string>
    <string name="comments_label">Comments</string>
    <string name="other_user_fname">Kitty</string>
    <string name="other_user_lname">Purry</string>
    <string name="dish_comment">Cupcake ipsum dolor. Sit amet wafer macaroon tiramisu. Croissant icing sweet pastry cookie tart and this will make 120.</string>
    <string name="descriptionlabel">DESCRIPTION</string>
    <string name="dish_description">A 500 gram block of silken tofu over creamy potato gratin served under a generous serving of leaves and assorted mushrooms. Meat option also available.</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="restaurant_label">Which restaurant is this from?</string>
    <string name="restaurant_input_hint">Food Kingdom</string>
    <string name="dish_input_hint">Sushi Burger</string>
    <string name="price_input_hint">12.40</string>
    <string name="done">DONE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_fname">Andrew</string>
    <string name="user_lname">Pop</string>
    <string name="user_uname">dru14</string>
    <string name="following_label">Following</string>
    <string name="rate_this_dish_label">Rate this dish</string>
    <string name="user_fullname">Andrew Pop</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="dish_rating_label">What do you rate this dish?</string>
    <string name="comment">Comment</string>
    <string name="Vegetarian_label">VEGETARIAN</string>
    <string name="Vegetarian_label1">Vegetarian</string>
    <string name="Vegan_label">VEGAN</string>
    <string name="Vegan_label1">Vegan</string>
    <string name="Gluten_free_label">GLUTEN FREE</string>
    <string name="comment_instruction">How was the dish? (optional)</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="fullname_label">FULL NAME</string>
    <string name="fname_label">FIRST NAME</string>
    <string name="lname_label">LAST NAME</string>
    <string name="uname_label">USERNAME</string>
    <string name="email_label">EMAIL ADDRESS</string>
    <string name="Passwood_label">PASSWORD</string>
    <string name="email">messageandrew@gmail.com</string>
    <string name="pw_asterix">**********</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="title_activity_mapview">MapviewActivity</string>
    <string name="title_activity_follow">FOLLOWING</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="update_detail">UPDATE DETAILS</string>
    <string name="edit_detail">EDIT DETAILS</string>
    <string name="sort_by_label">Sort by</string>
    <string name="rating_label">Rating</string>
    <string name="distance_label">Distance</string>
    <string name="fiftyhigher">5+</string>
    <string name="seventyfivehigher">7.5+</string>
    <string name="ninetyhigher">9+</string>
    <string name="enter_location">Enter location</string>
    <string name="price_range_label">Price range</string>
    <string name="price_lowtohigh">Low to high</string>
    <string name="price_hightolow">High to low</string>
    <string name="dietary">Dietary requirements</string>
    <string name="within_label">Within</string>
    <string name="onekm">1km</string>
    <string name="opennow">Open now</string>
    <string name="fivekm">5km</string>
    <string name="tenkm">10km</string>
    <string name="any_label">any</string>
    <string name="Starter_label">Starter</string>
    <string name="Main_label">MAIN</string>
    <string name="Dessert_label">DESSERT</string>
    <string name="Drink_label">DRINK</string>
    <string name="user">kittypurry</string>
    <string name="follow_search_hint">Username</string>
    <string name="title_activity_profiles_scrolling">ProfilesScrollingActivity</string>
</resources>