<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/dishImageProRow"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/search_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_weight="3" 
       >

        <TextView
            android:id="@+id/dishNameProRowTv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom|start"
            android:paddingLeft="14dp"
            android:text="@string/dish_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/restaurantNameProRowTv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="top|start"
            android:paddingLeft="14dp"
            android:text="@string/restaurant_name"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
         android:layout_width="0dp"
            android:layout_height="80dp" 
            android:layout_weight="1">

        <TextView
            android:id="@+id/dishRatingProRowTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/rating"
            android:textSize="24sp" />

        <Button
            android:id="@+id/RatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/location"
            android:textSize="14sp"
            android:visibility="gone" />
        
    </RelativeLayout>
</LinearLayout>